# api-bancaria-fastapi-python

./: .env-example  .gitignore  README.md  pyproject.toml
app/: database.py  main.py  security.py  seguranca.py
app/controllers/: agencia_controller.py  auth_controller.py  branch_controller.py  cliente_controller.py  customer_controller.py  transacao_controller.py  transaction_controller.py
app/dependencias/: dependencias.py  dependencies.py
app/models/: account.py  agencia.py  branch.py  cliente.py  conta.py  customer.py  transacao.py  transaction.py
app/repositories/: account_repository.py  agencia_repository.py  branch_repository.py  cliente_repository.py  conta_repository.py  customer_repository.py  transacao_repository.py  transaction_repository.py
app/schemas/: account_in.py  agencia_in.py  auth_in.py  branch_in.py  cliente_in.py  conta_in.py  customer_in.py  transacao_in.py  transaction_in.py
app/services/: account_service.py  agencia_service.py  branch_service.py  cliente_service.py  conta_service.py  customer_service.py  transacao_service.py  transaction_service.py
app/views/: account_out.py  agencia_out.py  branch_out.py  cliente_com_conta_out.py  cliente_out.py  conta_out.py  customer_out.py  customer_with_account_out.py  transacao_out.py  transaction_out.py
