[tool.poetry]
name = "dio-desafio"
version = "0.1.0"
description = ""
authors = ["Lailson Conceicao <lailsondev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.116.1,<0.117.0"
sqlalchemy = ">=2.0.43,<3.0.0"
databases = {extras = ["sqlite"], version = ">=0.9.0,<0.10.0"}
uvicorn = ">=0.35.0,<0.36.0"
python-dotenv = ">=1.1.1,<2.0.0"
python-jwt = ">=4.1.0,<5.0.0"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
